@@ -205,6 +205,7 @@ def package(vcs, rev, destdir, tmp = nil)
     end
   end
 
+  srcdir = File.realpath($srcdir)
   Dir.chdir(tmp) if tmp
 
   if !File.directory?(v)
@@ -212,6 +213,17 @@ def package(vcs, rev, destdir, tmp = nil)
     v.size == 1 or abort "not exported"
     v = v[0]
   end
+
+  # get last revision from previous ChangeLog archive
+  last_ChangeLog = Dir["#{v}/doc/ChangeLog-*"].grep(/-\d+\z/).last
+  open(last_ChangeLog) do |f|
+    f.readline
+    unless /\Ar(\d+) / =~ f.readline
+      abort "Cannot find revision from '#{last_ChangeLog}'"
+    end
+    vcs.export_changelog(srcdir, url, $1.to_i+1, revision.to_i, "#{v}/ChangeLog")
+  end
+
   open("#{v}/revision.h", "wb") {|f| f.puts "#define RUBY_REVISION #{revision}"}
   version ||= (versionhdr = IO.read("#{v}/version.h"))[RUBY_VERSION_PATTERN, 1]
   version or return
